[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

clap = { version = "4.4", features = ["derive"] }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
http-body-util = "0.1"
hyper = { version = "1.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

markdown = "1.0.0-alpha.16"
markup = "0.15"

grass = "0.13.1"
