[package]
name = "notchka"
version = "0.1.0"
edition = "2021"

[features]
dev = ["dep:http-body-util", "dep:hyper", "dep:hyper-util", "tokio/net"]

[dependencies]
colored = "2.1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

clap = { version = "4.4", features = ["derive"] }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.1", features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }

pulldown-cmark = "0.9"
markup = "0.15"

grass = "0.13.1"
